--- a/futter_basic4/pubspec.yaml
+++ b/futter_basic4/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.16.1
   http: ^0.12.2
   lottie: ^0.7.0+1
+  shared_preferences: ^0.5.12+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
