--- a/flutter_basic5/android/app/src/main/AndroidManifest.xml
+++ b/flutter_basic5/android/app/src/main/AndroidManifest.xml
@@ -44,5 +44,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data 
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBwUmdL0dVYUhltKeYT-v26mZXVcNsPZRY"/>
     </application>
 </manifest>
