--- a/flutter_basic5/ios/Runner/Info.plist
+++ b/flutter_basic5/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
   <string>대충 카메라 필요하다는 내용</string>
   <key>NSMicrophoneUsageDescription</key>
   <string>대충 마이크 필요하다는 내용</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>대충 로케이션 필요하다는 내용</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>대충 로케이션 필요하다는 내용</string>
 </dict>
 </plist>
