--- a/flutter_basic6/pubspec.yaml
+++ b/flutter_basic6/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: "0.5.2"
   cloud_firestore: ^0.14.3
   firebase_auth: ^0.18.3
+  image_picker: ^0.6.7+14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
