--- a/flutter_basic6/ios/Runner/Info.plist
+++ b/flutter_basic6/ios/Runner/Info.plist
@@ -22,6 +22,17 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>대충 카메라 필요하다는 내용</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>대충 마이크 필요하다는 내용</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>대충 갤러리 필요하다는 내용</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,11 +52,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>NSPhotoLibraryUsageDescription</key>
-    <string string>대충 갤러리 필요하다는 내용</string>
-  <key>NSCameraUsageDescription</key>
-    <string>대충 카메라 필요하다는 내용</string>
-  <key>NSMicrophoneUsageDescription</key>
-    <string>대충 마이크 필요하다는 내용</string>
 </dict>
 </plist>
