--- a/flutter_basic6/pubspec.yaml
+++ b/flutter_basic6/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   cloud_firestore: ^0.14.3
   firebase_auth: ^0.18.3
   image_picker: ^0.6.7+14
-
+  firebase_storage: ^5.0.1
+  firebase_messaging: ^7.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
